--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 <body>
     <div class="card">
         <div class="avatar">👋</div>
-        <h1>你好，我是 [你的名字]</h1>
+        <h1>你好，我是 [Silicon_toy]</h1>
         <p class="bio">
             一名热爱编程的开发者<br>
             喜欢探索新技术和创造有趣的项目
         </p>
         <div class="links">
-            <a href="https://github.com/你的用户名">📦 GitHub</a>
-            <a href="#">📝 博客</a>
-            <a href="#">📧 联系我</a>
+            <a href="https://github.com/Silicontoy">📦 GitHub</a>
+            <a href="https://Silicontoy.github.io">📝 博客</a>
+            <a href="https://Designismypet@outlook.com">📧 联系我</a>
         </div>
     </div>
 </body>
