--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="links">
             <a href="https://github.com/Silicontoy">📦 GitHub</a>
             <a href="https://Silicontoy.github.io">📝 博客</a>
-            <a href="https://Designismypet@outlook.com">📧 联系我</a>
+            <a href="Designismypet@outlook.com">📧 联系我</a>
         </div>
     </div>
 </body>
