Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的主页</title>
+    <title>Silicontoy | AI-EDA Engineer | Anti-Agile</title>
     <style>
         * {
             margin: 0;
@@ -77,15 +77,15 @@
 <body>
     <div class="card">
         <div class="avatar">👋</div>
-        <h1>你好，我是 [Silicon_toy]</h1>
+        <h1>Hi, I'm [Silicon_toy]</h1>
         <p class="bio">
-            一名热爱编程的开发者<br>
-            喜欢探索新技术和创造有趣的项目
+            An AI-EDA R&D Engineer<br>
+            On The Way to Hardware Self-Evolving AI Systems
         </p>
         <div class="links">
             <a href="https://github.com/Silicontoy">📦 GitHub</a>
-            <a href="https://Silicontoy.github.io">📝 博客</a>
-            <a href="mailto:Designismypet@outlook.com">📧 联系我</a>
+            <a href="https://Silicontoy.github.io">📝 Blog</a>
+            <a href="mailto:Designismypet@outlook.com">📧 E-mail</a>
         </div>
     </div>
 </body>
