Change AboutMe link icon from box to lightning

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </p>
         <div class="links">
             <a href="https://github.com/Silicontoy">📦 GitHub</a>
-            <a href="https://Silicontoy.github.io/aboutme">📦 AboutMe</a>
+            <a href="https://Silicontoy.github.io/aboutme">⚡ AboutMe</a>
             <a href="https://Silicontoy.github.io">📝 Blog</a>
             <a href="mailto:Designismypet@outlook.com">📧 E-mail</a>
         </div>
