--- a/aboutme.html
+++ b/aboutme.html
@@ -226,7 +226,7 @@
 
         .strikethrough {
             color: rgba(255,255,255,0.4);
-            text-decoration: line-through;
+            text-decoration: line;
             text-decoration-color: rgba(239, 68, 68, 0.6);
         }
 
