--- a/aboutme.html
+++ b/aboutme.html
@@ -224,6 +224,12 @@
             margin-bottom: 0;
         }
 
+        /* .strikethrough {
+            color: rgba(26,26,46,0.4);
+            text-decoration: line-through;
+            text-decoration-color: rgba(239, 68, 68, 0.6);
+        } */
+
         .highlight {
             color: #ff9d00;
             font-weight: 600;
@@ -534,10 +540,10 @@
             <span class="manifesto-icon">🌾</span>
             <div class="manifesto-text">
                 <p>
-                    I don't want to be the Seed Biotechnology Center at UC Davis—the top university in agricultural science. <span class="emphasis">Let Berkeley have that.</span>
+                    I don't want to be the <span class="strikethrough">Seed Biotechnology Center at UC Davis</span>—the top university in agricultural science. <span class="emphasis">Let Berkeley have that.</span>
                 </p>
                 <p>
-                    I don't want to be a Michelin three-star restaurant either. <span class="emphasis">Stunning plating, inconsistent flavor.</span>
+                    I don't want to be a <span class="strikethrough">Michelin three-star restaurant</span> either. <span class="emphasis">Stunning plating, inconsistent flavor.</span>
                 </p>
                 <p class="final-statement">
                     I want to be the <span class="highlight-gold">Cargill</span> of <span class="keyword">AI-EDA</span>.<br>
